# watchdog

./: .editorconfig  CMakeLists.txt  LICENSE  Readme.md  build.sh  conanfile.py
.github/workflows/: build.yml
config/: service-unit.txt
docs/: Build.md  Design.md  Doxyfile  Running.md
include/watchdog/: asset_inventory.hpp  asset_queue.hpp  event.hpp  inventory.hpp  named_pipe.hpp  named_pipe_message.hpp  named_pipe_reader.hpp  named_pipe_writer.hpp  queue.hpp  watchdog.hpp
src/: CMakeLists.txt  asset_queue.cpp  watchdog.cpp
src/watchdog-cli/: CMakeLists.txt  main.cpp
src/watchdog-daemon/: CMakeLists.txt  main.cpp  named_pipe_reader.cpp  service.cpp
src/watchdog-lib/: CMakeLists.txt  asset_inventory.cpp  event.cpp  inventory.cpp  named_pipe.cpp  named_pipe_message.cpp  named_pipe_reader.cpp  named_pipe_writer.cpp
tests/: CMakeLists.txt  main.cpp  named_pipe.cpp  watchdog.cpp
tools/: CMakeLists.txt  service.cpp
tools/frontend/: CMakeLists.txt
tools/service/: CMakeLists.txt  service.cpp
tools/service/config/: service-unit.txt
